--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-avatar-editor": "^13.0.2",
     "react-dom": "^18.3.1",
+    "react-google-button": "^0.8.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
